--- a/divstudy.css
+++ b/divstudy.css
@@ -3,16 +3,19 @@ div#s_left {
     height: 700px;
     background-color: yellow;
     float:left;
+    margin: 5px;
     }
     #contents{
         width: 400px;
         height: 700px;
         background-color: green;
         float: left;
+        margin: 5px;
     }
     #s_right{
         width: 200px;
         height: 700px;
-        background-color: red;
-        float:left
+        background-color: rgb(0, 255, 34);
+        float:left;
+        margin: 5px;
     }
