--- a/폰트아이콘활용.css
+++ b/폰트아이콘활용.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 .menubar{
@@ -18,25 +19,80 @@ ul li{
 }
 
 ul li a{
-    margin-right: 30px;
+    margin-right: 10px;
     color: white;
     text-decoration: none;
     
     padding: 10px 20px;
 }
-ul li a:hover{
+a.active, a:hover{
     background-color: rgb(255, 255, 255);
     color: black;
     border-radius: 8px;
 }
 
-.bb{
+.checkbtn{
     font-size: 30px;
     margin-right: 30px;
     float: right;
     line-height: 80px;
     color: rgb(230, 230, 230);
+    cursor: pointer;
+    margin-left: 30px;
+    display: none;
 }
-.bb:hover{
-    color: white;
+
+
+.logo{
+    width: 100px;
+   
+    margin-top: 24px;
+    float: left;
+    
+}
+
+#check{
+    display: none;
+}
+
+@media(max-width: 952px){
+
+    label.logopng{font-size: 30px;
+    padding-left: 50px;
+    }
+
+    nav ul li a{
+        font-size: 16px;
+    }
+}
+@media(max-width: 858px){
+    .checkbtn{
+        display: block;
+    }
+    ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: #2c3e50;
+        top: 80px;
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+    }
+    nav ul li{
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+    }
+    nav ul li a{
+        font-size: 20px;
+    }
+    a:hover,a.active{
+        background: none;
+        color: #0082e6;
+    }
+    #check:checked ~ ul {
+        left: 0;
+    }
+    
 }
