--- a/연습.css
+++ b/연습.css
@@ -1,7 +1,9 @@
 *{
     margin: 0;
     padding: 0;
+    
 }
+
 body{
     background: rgb(116, 112, 112);
 }
@@ -9,20 +11,28 @@ body{
     background: rgb(36, 35, 33);
     height: 80px;
 }
-ul{
+.menu ul{
     float: right;
 }
-ul li{
+.menu ul li{
     display: inline-block;
     line-height: 78px;
     margin-right: 60px;
-    
+   
 }
-ul li a{
+.menu ul li a{
     text-decoration: none;
     text-transform: uppercase;
     color: white;
+    padding: 5px 10px;
 }
+
+.menu ul li a.active,.menu ul li a:hover{
+    color: black;
+    background: white;
+   
+}
+
 .logo {
     color: white;
     width: 100px;
@@ -30,4 +40,61 @@ ul li a{
     vertical-align: middle;
     padding: 23px 80px;
     
+}
+.checkbtn{
+    color: white;
+    font-size: 30px;
+    float: right;
+    margin-right: 30px;
+    line-height: 80px;
+    display: none;
+    cursor: pointer;
+}
+
+#check{
+    display: none;
+}
+
+@media(max-width: 952px){
+    label.logo{
+        font-size: 30px;
+        padding-left: 50px;
+    }
+    .menu ul li a{
+        font-size: 16px;
+    }
+}
+@media(max-width:858px){
+   
+    .checkbtn{
+        display: block;
+    }
+    ul{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #2c3e50;
+    top: 80px;
+    left: -100%;
+    text-align: center;
+    transition: all .5s;
+}
+.menu ul li{
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
+}
+.menu ul li a{
+    font-size: 20px;
+    
+}
+.menu ul li a.active,.menu ul li a:hover{
+    background: none;
+    color: #0082e6;
+    
+}
+
+#check:checked ~ ul {
+    left: 0;
+}
 }
